# pyWaveformGenerator

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile.am  README.md  __init__.py  configure.ac  ctype_structs.py  interface.c  main.c  mcmc.py  mkconf.sh  myAlloc.c  myAlloc.h  myDatatypes.h  myFileIO.c  myFileIO.h  myLog.h  myOptparser.c  myOptparser.h  mySpherical.h  pBHRingdown.h  pCore.c  pCore.h  pDebug.c  pEnergyFlux.c  pEvolve.c  pFactorizedWaveform.c  pFactorizedWaveform.h  pHamiltonian.c  pHamiltonian.h  pHamiltonianDerivatives.c  pInitialCondition.c  pInitialCondition.h  pInitialConditionExact.c  pMemory.c  pNQCcorrection.c  pPrec.c  pPrec.h  (+14 more)
example/: test.ipynb  tutorial.ipynb
include/: config.h  myAlloc.h  myDatatypes.h  myFileIO.h  myLog.h  myOptparser.h  mySpherical.h  myUtils.h  newFactorizedWaveform.h  newFactorizedWaveformPrec.h  pBHRingdown.h  pCore.h  pDebug.h  pEnergyFlux.h  pFactorizedWaveform.h  pHamiltonian.h  pHamiltonianDerivatives.h  pInitialCondition.h  pInitialConditionExact.h  pMemory.h  pNQCcorrection.h  pPrec.h  pPrecHam.h  pPrecRRForce.h  pPrecUtils.h  pPrecWaveform.h  pRK4pdeIntegrator.h  pStructs.h  pUtils.h
psd/: ET-D-1-0000A-18.txt  ET-D-2-0000A-18.txt  __init__.py
pySEOBNREPHM/: __init__.py  ctype_structs.py  mcmc.py  mcmc_bilby.py  mode_collector.py  pyUtils.py  pycbc_plugin.py  waveform.py
pySEOBNREPHM/detector/: __init__.py  detector.py
pySEOBNREPHM/lib/: EOBLib.so.1  EOBLib.so.1.0
src/: interface.c  main.c  myAlloc.c  myFileIO.c  myLog.c  myOptparser.c  mySpherical.c  myUtils.c  newFactorizedWaveform.c  newFactorizedWaveformPrec.c  pBHRingdown.c  pCore.c  pDebug.c  pEnergyFlux.c  pEvolve.c  pFactorizedWaveform.c  pHamiltonian.c  pHamiltonianDerivatives.c  pInitialCondition.c  pInitialConditionExact.c  pMemory.c  pNQCcorrection.c  pPrec.c  pPrecHam.c  pPrecRRForce.c  pPrecUtils.c  pPrecWaveform.c  pRK4pdeIntegrator.c  pUtils.c
